--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GPriceScope</string>
+    <string name="app_name">GOGCrawler</string>
     <string name="title_search">Search</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
